--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "OSL-3.0",
     "require": {
         "php": ">=5.6.0",
-        "techdivision/import-product-grouped": "dev-master as 1.0.0"
+        "techdivision/import-product-ee": "7.0.*",
+        "techdivision/import-product-grouped": "1.0.0"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
