--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.6.0",
         "techdivision/import-product-ee": "7.0.*",
-        "techdivision/import-product-grouped": "1.0.0"
+        "techdivision/import-product-grouped": "2.0.*"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
