--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,13 @@
         "psr-4": {
             "TechDivision\\Import\\Product\\Grouped\\Ee\\": [
                 "src/",
-                "symfony/",
+                "symfony/"
+            ]
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TechDivision\\Import\\Product\\Grouped\\Ee\\": [
                 "tests/unit"
             ]
         }
